<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorWindowBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.mdsps.contacts.activity.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_group_title_height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/settings_group_title_icon_width"
                android:layout_height="@dimen/settings_group_title_icon_width"
                android:contentDescription="@string/settings_contact_group_title"
                android:src="@drawable/vector_ic_settings_grey"
                android:layout_marginLeft="@dimen/settings_group_title_icon_horizontal_margin"
                android:layout_marginRight="@dimen/settings_group_title_icon_horizontal_margin"
                android:layout_marginTop="@dimen/settings_group_title_icon_vertical_margin"
                android:layout_marginBottom="@dimen/settings_group_title_icon_vertical_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/settings_general_group_title"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/settings_group_title_text_size"
                android:layout_marginRight="@dimen/settings_group_title_icon_horizontal_margin" />
        </LinearLayout>

        <View
            android:layout_height="3dp"
            android:layout_width="match_parent"
            android:background="@drawable/linear_divider_horizontal"
            android:layout_marginLeft="@dimen/settings_group_title_icon_horizontal_margin"
            android:layout_marginRight="@dimen/settings_group_title_icon_horizontal_margin" />.

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_heights"
            app:rv_color="@color/md_teal_300"
            app:rv_type="rectangle">

            <LinearLayout
                android:id="@+id/settings_theme"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/settings_item_text_box_horizontal_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/settings_general_theme_title"
                        android:textSize="@dimen/settings_item_title_text_size"
                        android:id="@+id/settings_theme_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:textSize="@dimen/settings_item_description_text_size"
                        android:id="@+id/settings_theme_desc" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="@dimen/settings_item_change_box_width"
                    android:layout_height="@dimen/settings_item_change_box_height"
                    android:paddingLeft="@dimen/settings_item_change_box_padding"
                    android:paddingTop="@dimen/settings_item_change_box_padding"
                    android:paddingRight="@dimen/settings_item_change_box_padding"
                    android:paddingBottom="@dimen/settings_item_change_box_padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_name_type_title"
                        android:src="@drawable/vector_ic_keyboard_arrow_right_grey" />
                </FrameLayout>

            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_heights"
            app:rv_color="@color/md_teal_300"
            app:rv_type="rectangle">

            <LinearLayout
                android:id="@+id/settings_accounts"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/settings_item_text_box_horizontal_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/settings_general_show_account_title"
                        android:textSize="@dimen/settings_item_title_text_size"
                        android:id="@+id/settings_accounts_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_general_show_account_desc"
                        android:textSize="@dimen/settings_item_description_text_size"
                        android:id="@+id/settings_accounts_desc" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="@dimen/settings_item_change_box_width"
                    android:layout_height="@dimen/settings_item_change_box_height"
                    android:paddingLeft="@dimen/settings_item_change_box_padding"
                    android:paddingTop="@dimen/settings_item_change_box_padding"
                    android:paddingRight="@dimen/settings_item_change_box_padding"
                    android:paddingBottom="@dimen/settings_item_change_box_padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_name_type_title"
                        android:src="@drawable/vector_ic_keyboard_arrow_right_grey" />
                </FrameLayout>

            </LinearLayout>
        </com.andexert.library.RippleView>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_group_title_height"
            android:layout_marginTop="@dimen/settings_group_title_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/settings_group_title_icon_width"
                android:layout_height="@dimen/settings_group_title_icon_width"
                android:contentDescription="@string/settings_contact_group_title"
                android:src="@drawable/vector_ic_person_grey"
                android:layout_marginLeft="@dimen/settings_group_title_icon_horizontal_margin"
                android:layout_marginRight="@dimen/settings_group_title_icon_horizontal_margin"
                android:layout_marginTop="@dimen/settings_group_title_icon_vertical_margin"
                android:layout_marginBottom="@dimen/settings_group_title_icon_vertical_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/settings_contact_group_title"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/settings_group_title_text_size"
                android:layout_marginRight="@dimen/settings_group_title_icon_horizontal_margin" />
        </LinearLayout>

        <View
            android:layout_height="3dp"
            android:layout_width="match_parent"
            android:background="@drawable/linear_divider_horizontal"
            android:layout_marginLeft="@dimen/settings_group_title_icon_horizontal_margin"
            android:layout_marginRight="@dimen/settings_group_title_icon_horizontal_margin" />.

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_heights"
            app:rv_color="@color/md_teal_300"
            app:rv_type="rectangle">

            <LinearLayout
                android:id="@+id/settings_name_type"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/settings_item_text_box_horizontal_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/settings_name_type_title"
                        android:textSize="@dimen/settings_item_title_text_size"
                        android:id="@+id/settings_name_type_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:textSize="@dimen/settings_item_description_text_size"
                        android:id="@+id/settings_name_type_desc" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="@dimen/settings_item_change_box_width"
                    android:layout_height="@dimen/settings_item_change_box_height"
                    android:paddingLeft="@dimen/settings_item_change_box_padding"
                    android:paddingTop="@dimen/settings_item_change_box_padding"
                    android:paddingRight="@dimen/settings_item_change_box_padding"
                    android:paddingBottom="@dimen/settings_item_change_box_padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_name_type_title"
                        android:src="@drawable/vector_ic_keyboard_arrow_right_grey" />
                </FrameLayout>

            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_heights"
            app:rv_color="@color/md_teal_300"
            app:rv_type="rectangle">

            <LinearLayout
                android:id="@+id/settings_item_type"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/settings_item_text_box_horizontal_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/settings_contact_item_type_tytle"
                        android:textSize="@dimen/settings_item_title_text_size"
                        android:id="@+id/settings_item_type_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:textSize="@dimen/settings_item_description_text_size"
                        android:id="@+id/settings_item_type_desc" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="@dimen/settings_item_change_box_width"
                    android:layout_height="@dimen/settings_item_change_box_height"
                    android:paddingLeft="@dimen/settings_item_change_box_padding"
                    android:paddingTop="@dimen/settings_item_change_box_padding"
                    android:paddingRight="@dimen/settings_item_change_box_padding"
                    android:paddingBottom="@dimen/settings_item_change_box_padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_name_type_title"
                        android:src="@drawable/vector_ic_keyboard_arrow_right_grey" />
                </FrameLayout>

            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_heights"
            app:rv_color="@color/md_teal_300"
            app:rv_type="rectangle">

            <LinearLayout
                android:id="@+id/settings_show_call"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/settings_item_text_box_horizontal_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/settings_show_call_button_title"
                        android:textSize="@dimen/settings_item_title_text_size"
                        android:id="@+id/settings_show_call_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_show_call_button_desc"
                        android:textSize="@dimen/settings_item_description_text_size"
                        android:id="@+id/settings_show_call_desc" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="@dimen/settings_item_change_box_width"
                    android:layout_height="@dimen/settings_item_change_box_height"
                    android:paddingLeft="@dimen/settings_item_change_box_padding"
                    android:paddingTop="@dimen/settings_item_change_box_padding"
                    android:paddingRight="@dimen/settings_item_change_box_padding"
                    android:paddingBottom="@dimen/settings_item_change_box_padding">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/settings_show_call_check"
                        android:layout_marginLeft="-4dp" />
                </FrameLayout>

            </LinearLayout>
        </com.andexert.library.RippleView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
